force-app/main/default/objects/custom_create9__c/custom_create9__c.object-meta.xml
<CustomObject>
    <label>Custom created object9</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects9</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>