force-app/main/default/objects/custom_create9__c/fields/custom_create_9field620__c.field-meta.xml
<CustomField>
    <fullName>custom_create_9field620__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 9field620</label>
    <type>Checkbox</type>
</CustomField>